--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "## Project setup ``` npm install ```",
-  "author": "",
+  "author": "Meow",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
