--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.7",
     "core-js": "^3.8.3",
     "fabric": "^5.2.1",
+    "file-saver": "^2.0.5",
     "jscolor": "^0.3.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3",
