--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jscolor": "^0.3.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-tailwind": "^2.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
