--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "core-js": "^3.8.3",
     "fabric": "^5.2.1",
     "file-saver": "^2.0.5",
+    "jquerry": "^0.0.1-security",
     "jscolor": "^0.3.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3",
+    "three": "^0.141.0",
     "vue": "^2.6.14",
     "vue-color": "^2.8.1"
   },
